05-Metal&Traefik/003-Whoami/03-Whoami-ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-ingress
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`whoami.lab.io`)
      services:
        - kind: Service
          name: whoami-servisi
          port: 80
